# MachineLearning

./: .gitignore  README.md
Adaline/: CMakeLists.txt
Adaline/src/: adaline.cpp  adaline.h  customplot.h  mainwindow.cpp  mainwindow.h  pixelgrid.cpp  pixelgrid.h  settings.cpp  settings.h  trainingitem.cpp  trainingitem.h  util.cpp  util.h
LinearClassifier/Autoassociator/: CMakeLists.txt
LinearClassifier/Autoassociator/src/: bitmaplc.cpp  bitmaplc.h  clickablelabel.cpp  clickablelabel.h  graphicsview.cpp  graphicsview.h  graphicsviewarea.cpp  graphicsviewarea.h  linearclassifier.cpp  linearclassifier.h  mainwindow.cpp  mainwindow.h  newviewdialog.cpp  newviewdialog.h  perceptron.cpp  perceptron.h  settings.cpp  settings.h  trainingitem.cpp  trainingitem.h
Perceptron/: CMakeLists.txt  Perceptron.pro  mainwindow.cpp  mainwindow.h  pixelgrid.h  settings.cpp  settings.h  trainingitem.cpp  util.cpp  util.h
Perceptron/src/: perceptron.cpp  perceptron.h  pixelgrid.cpp  settings.h  trainingitem.h
